<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bb_menu_meizhi"
        android:icon="@drawable/ic_favorites"
        android:title="@string/meizhi" />
    <item
        android:id="@+id/bb_menu_android"
        android:icon="@drawable/ic_android_black_24px"
        android:title="@string/android" />
    <item
        android:id="@+id/bb_menu_ios"
        android:icon="@drawable/ic_apple_72px_1137741_easyiconnet"
        android:title="@string/ios" />
    <item
        android:id="@+id/bb_menu_webdesign"
        android:icon="@drawable/ic_chrome"
        android:title="@string/web_desigin" />
    <item
        android:id="@+id/bb_menu_extend"
        android:icon="@drawable/ic_restaurants"
        android:title="@string/extend" />
</menu>
